prevent x overflow

--- a/src/app/components/Testimonial/Testimonial.scss
+++ b/src/app/components/Testimonial/Testimonial.scss
@@ -1,11 +1,13 @@
 .testimonials {
   margin-top: 1rem;
   width: 100%;
+  overflow: hidden;
 
   [class^='number-slide'],
   [class*=' number-slide'] {
     background: grey;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     font-size: 50px;
